using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace My1WeekGameSystems_ver3{
  public enum E_SceneName{
    TitleScene
  }
}
